Issue 25: Different alignment for header text.

--- a/src/assets/styles/partials/_header.scss
+++ b/src/assets/styles/partials/_header.scss
@@ -24,7 +24,7 @@ header {
 
 .site-header__slogan {
   display: inline-block;
-  vertical-align: bottom;
+  vertical-align: middle;
   max-width: 380px;
   font-size: 18px;
   text-align: left;
